2011-08-25  Peter Schueller  <ps@kr.tuwien.ac.at>

	* include/dlvhex/HexGrammar.h: Parsing predicate. Differentiation between predicates and terms.
	* include/dlvhex/PredicateTable.hpp: Likewise.
	* include/dlvhex/HexGrammar.tcc: Likewise.
	* include/dlvhex/Module.hpp: Likewise.

2011-08-20  Peter Schueller  <ps@kr.tuwien.ac.at>

	* include/dlvhex/HexGrammar.tcc: Removed expectation operator that interfered
	with strong negation plugin.
	* include/dlvhex/GraphvizHelpers.hpp: Improved graphviz output escaping (new file).
	* include/dlvhex/Makefile.am: Likewise.
	* src/dlvhex/DependencyGraph.cpp: Likewise.
	* src/dlvhex/DependencyGraphFull.cpp: Likewise.
	* src/dlvhex/ComponentGraph.cpp: Likewise.

2011-08-17 Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* cheatsheet: Cheatsheet for installing TD-MLP.

	* include/dlvhex/MLPSolver.hpp: Cleaning up.

2011-08-16 Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/ModuleSyntaxChecker.hpp: Richer error messages.

2011-08-16  Peter Schueller  <ps@kr.tuwien.ac.at>

	* src/dlvhex/GuessAndCheckModelGenerator.cpp: Fixed TODO in G&C Model Generator.
	* src/dlvhex/State.cpp: Made warning message more precise.

2011-08-08 Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* generator/getFirstASData.sh: Get more detailed information for the first answer set found.

2011-08-06 Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* generator/avgScript-all.sh: Get average data (more detail information) from random program experiments.

2011-08-01  Peter Schueller  <ps@kr.tuwien.ac.at>

	* src/dlvhex/HigherOrderPlugin.cpp: Implemented Higher Order Plugin.
	* include/dlvhex/HigherOrderPlugin.hpp: Likewise.
	* examples/higherorder*.hex: Likewise (testcases).
	* examples/tests/higherorder*.*: Likewise (testcases).

2011-07-27  Peter Schueller  <ps@kr.tuwien.ac.at>

	* src/dlvhex/DependencyGraph.cpp: Fixing bug in dependency graph exposed
	by strong negation tests.