@@ -1,4 +1,9 @@
-2011-08-25  Peter Schueller  <ps@kr.tuwien.ac.at>
+2011-08-25  Tri Kurniawan Wijaya  <ps@kr.tuwien.ac.at>
+
+	* include/dlvhex/HexGrammar.h: Parsing module header (non-working revision, yet).
+	* include/dlvhex/ModuleTable.hpp: Likewise.
+	* include/dlvhex/HexGrammar.tcc: Likewise.
+	* testsuite/TestHexParser.cpp: Likewise.
 
 	* include/dlvhex/HexGrammar.h: Parsing predicate. Differentiation between predicates and terms.
 	* include/dlvhex/PredicateTable.hpp: Likewise.
